# bambuddy-mcp

./: .gitignore  CLAUDE.md  README.md  bambuddy_mcp.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/bambuddy_mcp/: __init__.py  __main__.py  config.py  http.py  openapi.py  search.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_find_printer.py  test_http.py  test_openapi.py  test_search.py
